--- a/TenderStore/appsettings.json
+++ b/TenderStore/appsettings.json
@@ -1,21 +1,40 @@
+//{
+//  /*
+//The following identity settings need to be configured
+//before the project can be successfully executed.
+//For more info see https://aka.ms/dotnet-template-ms-identity-platform 
+//*/
+//  //"AzureAd": {
+//  //  "Instance": "https://login.microsoftonline.com/",
+//  //  "Domain": "qualified.domain.name",
+//  //  "TenantId": "22222222-2222-2222-2222-222222222222",
+//  //  "ClientId": "11111111-1111-1111-11111111111111111",
+//  //  "CallbackPath": "/signin-oidc"
+//  //},
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft.AspNetCore": "Warning"
+//    }
+//  },
+//  "ConnectionStrings": {
+//    "DefaultConnection": "server=.;database=TendesStore;user id=sa;password=1234;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security = true;"
+//  },
+
+//  "AllowedHosts": "*"
+//}
 {
-/*
-The following identity settings need to be configured
-before the project can be successfully executed.
-For more info see https://aka.ms/dotnet-template-ms-identity-platform 
-*/
-  "AzureAd": {
-    "Instance": "https://login.microsoftonline.com/",
-    "Domain": "qualified.domain.name",
-    "TenantId": "22222222-2222-2222-2222-222222222222",
-    "ClientId": "11111111-1111-1111-11111111111111111",
-    "CallbackPath": "/signin-oidc"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=.;database=TendesStore;user id=sa;password=1234;Trusted_Connection=True;TrustServerCertificate=True;Integrated Security = true;"
+    // "DefaultConnection": "server=.;database=GiftPakage;user id=sa;password=sks@1111;TrustServerCertificate=True;Integrated Security = true;"
+    //  "DefaultConnection": "server=172.29.7.46;database=GiftPakage;user id=sa;password=$k$sco@org@REf@|-|;"
+
   },
   "AllowedHosts": "*"
 }
