--- a/TS.Domain.Core/TS.Domain.Core.csproj
+++ b/TS.Domain.Core/TS.Domain.Core.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\ApplicationService\" />
+    <Folder Include="Contracts\Service\" />
+    <Folder Include="Contracts\Repository\" />
+    <Folder Include="Dtos\" />
+  </ItemGroup>
+
 </Project>
