--- a/TS.Domain.Services/TS.Domain.Services.csproj
+++ b/TS.Domain.Services/TS.Domain.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TS.Domain.Core\TS.Domain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
