--- a/TS.Infrastructures.DB.Repo.Ef/TS.Infrastructures.DB.Repo.Ef.csproj
+++ b/TS.Infrastructures.DB.Repo.Ef/TS.Infrastructures.DB.Repo.Ef.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\TS.Domain.Core\TS.Domain.Core.csproj" />
     <ProjectReference Include="..\TS.Infrastructure.Database.SqlServer\TS.Infrastructure.Database.SqlServer.csproj" />
   </ItemGroup>
