--- a/TenderStore/TS.Endpoints.UI.csproj
+++ b/TenderStore/TS.Endpoints.UI.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="7.0.7" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="7.0.7" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.13">
@@ -23,6 +24,7 @@
     <ProjectReference Include="..\TS.Domain.Core\TS.Domain.Core.csproj" />
     <ProjectReference Include="..\TS.Domain.Services\TS.Domain.Services.csproj" />
     <ProjectReference Include="..\TS.Infrastructure.Database.SqlServer\TS.Infrastructure.Database.SqlServer.csproj" />
+    <ProjectReference Include="..\TS.Infrastructures.DB.Repo.Ef\TS.Infrastructures.DB.Repo.Ef.csproj" />
   </ItemGroup>
 
 </Project>
